# Learning-User-Navigation-Assistant

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/schemas/: chat.py
backend/app/services/: rag.py
backend/scripts/: build_index.py
data/projects/: security_log_analyzer.md
frontend/src/: widget.js
