[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Learning-User-Navigation-Assistant"
version = "0.1.0"
description = "LLM-powered assistant embedded into my portfolio website."
authors = [
    {name = "Alejandro Lopez Ruiz", email = "alej.lopez.ruiz@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.2.0",
    "black>=24.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
select = ["E", "F"]
line-length = 88